--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Trafegus Test</title>
-    <?= $this->headTitle('ZF Skeleton Application')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <title>Sistema de Logística</title>
+    <?= $this->headTitle('ZF Application')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?= $this->headMeta()
         ->appendName('viewport', 'width=device-width, initial-scale=1.0')
@@ -15,6 +15,7 @@
     <?= $this->headLink(['rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'])
         ->prependStylesheet($this->basePath('css/style.css'))
         ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
+        ->prependStylesheet($this->basePath('css/dataTables.min.css'))
     ?>
 
     <!-- Scripts -->
@@ -22,8 +23,13 @@
         ->prependFile($this->basePath('js/bootstrap.min.js'))
         ->prependFile($this->basePath('js/jquery-3.3.1.min.js'))
     ?>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+<?= $this->inlineScript()
+    ->prependFile($this->basePath('js/jquery-dataTables.min.js'))
+    ->prependFile($this->basePath('js/custom/main.js'))
+?>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" role="navigation">
     <div class="container">
         <div class="navbar-header">
@@ -33,22 +39,26 @@
             </button>
             <a class="navbar-brand" href="<?= $this->url('home') ?>">
                 <img src="<?= $this->basePath('img/zf-logo-mark.svg') ?>" height="28"
-                     alt="Zend Framework <?= \Application\Module::VERSION ?>"/>&nbsp;Skeleton Application
+                     alt="Zend Framework <?= \Application\Module::VERSION ?>"/>&nbsp;Gerenciamento de Frota
             </a>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="<?= $this->url('home') ?>">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link <?= $this->url('home') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('home') ?>">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="<?= $this->url('vehicles') ?>">Veículos<span class="sr-only">(current)</span></a>
+                    <a class="nav-link <?= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('vehicles') ?>">Veículos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="<?= $this->url('home') ?>">Motoristas<span class="sr-only">(current)</span></a>
+                    <a class="nav-link <?= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('vehicles') ?>">Motoristas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="<?= $this->url('home') ?>">Rastreio<span class="sr-only">(current)</span></a>
+                    <a class="nav-link <?= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('vehicles') ?>">Rastreio</a>
                 </li>
             </ul>
         </div>
