--- a/module/Vehicle/view/vehicle/vehicle/index.phtml
+++ b/module/Vehicle/view/vehicle/vehicle/index.phtml
@@ -1,27 +1,43 @@
 <div class="container">
     <div class="row py-3">
-        <div class="col-12 card">
-            <h2 class="card-title text-center">Lista de Veículos</h2>
-            <table class="table table-hover table-striped">
-                <thead>
-                <tr>
-                    <th>Placa</th>
-                    <th>Modelo</th>
-                    <th>Marca</th>
-                    <!-- Outros campos -->
-                </tr>
-                </thead>
-                <tbody>
-                <!--         Loop para exibir os veículos -->
-                <?php foreach ($this->vehicles as $vehicle) : ?>
-                    <tr>
-                        <td><?= $vehicle->getPlaca(); ?></td>
-                        <td><?= $vehicle->getModelo(); ?></td>
-                        <td><?= $vehicle->getMarca(); ?></td>
-                    </tr>
-                <?php endforeach; ?>
-                </tbody>
-            </table>
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header d-flex justify-content-between">
+                    <h2 class="card-title m-0">Lista de Veículos</h2>
+                    <a href="<?= $this->url('vehicles', ['action' => 'add']); ?>"
+                       class="btn btn-primary btn">
+                        Novo Veículo <i class="fa fa-plus"></i>
+                    </a>
+                </div>
+                <div class="card-body">
+                    <table class="table table-hover table-striped" id="dtExclusive">
+                        <thead>
+                        <tr>
+                            <th>Placa</th>
+                            <th>Modelo</th>
+                            <th>Marca</th>
+                            <th>Ações</th>
+                            <!-- Outros campos -->
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <!--         Loop para exibir os veículos -->
+                        <?php foreach ($this->vehicles as $vehicle) : ?>
+                            <tr>
+                                <td><?= $vehicle->getPlaca(); ?></td>
+                                <td><?= $vehicle->getModelo(); ?></td>
+                                <td><?= $vehicle->getMarca(); ?></td>
+                                <td>
+                                    <a href="<?= $this->url('vehicles', ['action' => 'edit', 'id' => $vehicle->getId()]); ?>"
+                                       class="btn btn-sm btn-warning">Editar</a>
+                                    <a href="<?= $this->url('vehicles', ['action' => 'delete', 'id' => $vehicle->getId()]); ?>"
+                                       class="btn btn-sm btn-danger">Excluir</a>
+                            </tr>
+                        <?php endforeach; ?>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
