Finalize Vehicle CRUD, configure ORM to manage DB and insert Motorist module.

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -12,7 +12,7 @@
             </a>
         </div>
         <div class="col-md-4">
-            <a href="/motorist" class="btn btn-success btn-block mb-3">
+            <a href="/motorists" class="btn btn-success btn-block mb-3">
                 <i class="fas fa-user fa-4x p-3"></i>
                 <h3>Motoristas</h3>
             </a>
