--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -53,13 +53,13 @@
                        href="<?= $this->url('vehicles') ?>">Veículos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link <?= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
-                       href="<?= $this->url('vehicles') ?>">Motoristas</a>
+                    <a class="nav-link <?= $this->url('motorists') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('motorists') ?>">Motoristas</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link <?= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
-                       href="<?= $this->url('vehicles') ?>">Rastreio</a>
-                </li>
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link --><?php //= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?><!--"-->
+<!--                       href="--><?php //= $this->url('vehicles') ?><!--">Rastreio</a>-->
+<!--                </li>-->
             </ul>
         </div>
     </div>
