--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -17,17 +17,18 @@
         ->prependStylesheet($this->basePath('css/bootstrap.min.css'))
         ->prependStylesheet($this->basePath('css/dataTables.min.css'))
     ?>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- Scripts -->
     <?= $this->inlineScript()
         ->prependFile($this->basePath('js/bootstrap.min.js'))
         ->prependFile($this->basePath('js/jquery-3.3.1.min.js'))
     ?>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
 <?= $this->inlineScript()
     ->prependFile($this->basePath('js/jquery-dataTables.min.js'))
+    ->prependFile($this->basePath('js/jquery.mask.min.js'))
     ->prependFile($this->basePath('js/custom/main.js'))
 ?>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark" role="navigation">
