--- a/module/Vehicle/view/vehicle/vehicle/add.phtml
+++ b/module/Vehicle/view/vehicle/vehicle/add.phtml
@@ -44,28 +44,10 @@
                                 <input type="text" class="form-control" id="cor" name="cor" required maxlength="20">
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-success" id="addButton" disabled>Adicionar</button>
+                        <button type="submit" class="btn btn-success" id="saveButton" disabled>Adicionar</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-<script>
-    const form = document.getElementById('formCadastro');
-    const submitButton = document.getElementById('addButton');
-
-    form.addEventListener('input', function() {
-        const inputs = form.querySelectorAll('input[required]');
-        let allValid = true;
-
-        inputs.forEach(input => {
-            if (!input.value) {
-                allValid = false;
-            }
-        });
-
-        submitButton.disabled = !allValid;
-    });
-</script>
