--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -1,6 +1,6 @@
 <?= $this->doctype() ?>
 
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8">
     <title>Sistema de Logística</title>
@@ -21,7 +21,7 @@
 
     <!-- Scripts -->
     <?= $this->inlineScript()
-        ->prependFile($this->basePath('js/bootstrap.min.js'))
+        ->prependFile($this->basePath('js/bootstrap.js/bootstrap.min.js'))
         ->prependFile($this->basePath('js/jquery-3.3.1.min.js'))
     ?>
 </head>
@@ -57,10 +57,10 @@
                     <a class="nav-link <?= $this->url('motorists') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
                        href="<?= $this->url('motorists') ?>">Motoristas</a>
                 </li>
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link --><?php //= $this->url('vehicles') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?><!--"-->
-<!--                       href="--><?php //= $this->url('vehicles') ?><!--">Rastreio</a>-->
-<!--                </li>-->
+                <li class="nav-item">
+                    <a class="nav-link <?= $this->url('map') === $_SERVER['REQUEST_URI'] ? 'active' : '' ?>"
+                       href="<?= $this->url('map') ?>">Rastreio</a>
+                </li>
             </ul>
         </div>
     </div>
