--- a/module/Motorist/view/motorist/motorist/index.phtml
+++ b/module/Motorist/view/motorist/motorist/index.phtml
@@ -24,19 +24,20 @@
                         <tbody>
                         <!-- Loop para exibir os motoristas -->
                         <?php foreach ($this->motorists as $motorist) : ?>
-                            <?php $vehicle = $this->vehicles[$motorist->getVehicleId()]; ?>
                             <tr>
                                 <td><?= $motorist->getNome(); ?></td>
                                 <td class="rg"><?= $motorist->getRg(); ?></td>
                                 <td class="cpf"><?= $motorist->getCpf(); ?></td>
                                 <td class="telefone"><?= $motorist->getTelefone(); ?></td>
-                                <td>
-                                    <?php if ($vehicle) : ?>
-                                        <?= $vehicle->getPlaca() ?> • <?= $vehicle->getModelo() ?>
-                                    <?php else : ?>
-                                        Nenhum
-                                    <?php endif; ?>
-                                </td>
+                                <?php if ($motorist->getVehicleId() == 0) : ?>
+                                    <td>Nenhum</td>
+                                <?php else: ?>
+                                    <?php foreach ($this->vehicles as $vehicle) : ?>
+                                        <?php if ($vehicle->getId() == $motorist->getVehicleId()) : ?>
+                                            <td><?= $vehicle->getPlaca() ?> • <?= $vehicle->getModelo() ?></td>
+                                        <?php endif; ?>
+                                    <?php endforeach; ?>
+                                <?php endif; ?>
                                 <td>
                                     <a href="<?= $this->url('motorists', ['action' => 'edit', 'id' => $motorist->getId()]); ?>"
                                        class="btn btn-sm btn-warning">Editar</a>
