--- a/module/Vehicle/view/vehicle/vehicle/view.phtml
+++ b/module/Vehicle/view/vehicle/vehicle/view.phtml
@@ -16,7 +16,7 @@
                            class="btn btn-warning">
                             Editar Veículo <i class="fa fa-pencil"></i>
                         </a>
-                        <a href="<?= $this->url('vehicles', ['action' => 'delete']); ?>"
+                        <a href="<?= $this->url('vehicles', ['action' => 'delete', 'id' => $vehicle->getId()]); ?>"
                            class="btn btn-danger">
                             Excluir Veículo <i class="fa fa-trash"></i>
                         </a>
